<resources>
    <string name="app_name">Mobi Publishing</string>
    <string name="action_settings">Settings</string>
    <string name="action_discover">Discover</string>
    <string name="action_select_ingredients">Select Ingredients</string>
    <string name="action_find_recipes">Find Recipes</string>
    <string name="action_back_to_main">Back To Main</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_undo">Undo</string>
    <string name="action_add_ingredients">Add Ingredient</string>
    <string name="action_clear_ingredients">Clear Ingredients</string>
    <string name="action_add_to_favourites">Add To Favourites</string>
    <string name="action_view_description">View Description</string>
    <string name="action_share">Share</string>

    <string name="title_activity_discover">DiscoverActivity</string>
    <string name="title_activity_view_recipe">ViewRecipeActivity</string>
    <string name="title_activity_suggested_recipes">Suggested Recipes</string>
    <string name="title_activity_confirm_ingredients">Confirm Ingredients</string>
    <string name="title_activity_add_ingredients">Add Ingredients</string>
    <string name="title_activity_take_photo">Take Photo</string>

    <string name="nav_cookbooks">Cookbooks</string>
    <string name="nav_discover">Discover</string>
    <string name="nav_favourites">Favourites</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_recipe_categories">Recipe Categories</string>
    <string name="title_activity_recipes">Recipes</string>
</resources>
