<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_to_favourites"
        android:orderInCategory="100"
        android:title="@string/action_add_to_favourites"
        android:icon="@drawable/baseline_favorite_border_white_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        android:icon="@drawable/baseline_share_white_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_view_description"
        android:orderInCategory="100"
        android:title="@string/action_view_description"
        app:showAsAction="never" />
</menu>